Lots of things with words and samples.

--- a/landscape/Wordsmithery.ipynb
+++ b/landscape/Wordsmithery.ipynb
@@ -17,7 +17,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
@@ -28,7 +28,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 3
+     "prompt_number": 21
     },
     {
      "cell_type": "code",
@@ -51,7 +51,7 @@
        ]
       }
      ],
-     "prompt_number": 26
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
@@ -65,13 +65,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 12,
+       "prompt_number": 23,
        "text": [
         "['REFERENCENUMBER']"
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 23
     },
     {
      "cell_type": "code",
@@ -87,13 +87,450 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 19,
+       "prompt_number": 24,
        "text": [
         "'reference'"
        ]
       }
      ],
-     "prompt_number": 19
+     "prompt_number": 24
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def gen_pairs(string, stop=1):\n",
+      "    sz = len(string)\n",
+      "    if sz == 1:\n",
+      "        return\n",
+      "    half = sz / 2\n",
+      "    for i in range(half, sz-stop):\n",
+      "        yield string[:i], string[i:]\n",
+      "    for i in range(half, sz-stop):\n",
+      "        yield string[:-i], string[-i:]\n",
+      "    \n",
+      "print list( gen_pairs('contractemail') )\n",
+      "print list( gen_pairs('noticeid') )\n",
+      "print list( gen_pairs('org') )"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[('contra', 'ctemail'), ('contrac', 'temail'), ('contract', 'email'), ('contracte', 'mail'), ('contractem', 'ail'), ('contractema', 'il'), ('contrac', 'temail'), ('contra', 'ctemail'), ('contr', 'actemail'), ('cont', 'ractemail'), ('con', 'tractemail'), ('co', 'ntractemail')]\n",
+        "[('noti', 'ceid'), ('notic', 'eid'), ('notice', 'id'), ('noti', 'ceid'), ('not', 'iceid'), ('no', 'ticeid')]\n",
+        "[('o', 'rg'), ('or', 'g')]\n"
+       ]
+      }
+     ],
+     "prompt_number": 54
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "import re\n",
+      "\n",
+      "def is_word(string):\n",
+      "    if wn.synsets(string):\n",
+      "        return True\n",
+      "    \n",
+      "def find_two_words(string):\n",
+      "    best = None\n",
+      "    best_score = 0\n",
+      "    for left, right in gen_pairs(string):\n",
+      "        score = 0\n",
+      "        if is_word(left):\n",
+      "            score += .5\n",
+      "        if is_word(right):\n",
+      "            score += .5\n",
+      "        if score > best_score:\n",
+      "            best = left, right\n",
+      "            best_score = score\n",
+      "    return best\n",
+      "    \n",
+      "def split_words(string):\n",
+      "    \"\"\"\n",
+      "    Spits a string into multiple words.\n",
+      "    This assumes any string of letters is only at max two words.\n",
+      "    \n",
+      "    If there is a space in it, we assume it's already split and is all nice.\n",
+      "    \"\"\"\n",
+      "    string = string.strip().lower()\n",
+      "    \n",
+      "    if ' ' in string:\n",
+      "        for obj in string.split():\n",
+      "            yield obj.lower()\n",
+      "    \n",
+      "    subs = re.split('([^a-z]+)', string.lower())\n",
+      "    for sub in subs:\n",
+      "        \n",
+      "        ## If it's not a word, well we don't care about it.\n",
+      "        if not re.match('[a-z]+', sub):\n",
+      "            continue\n",
+      "        \n",
+      "        ## If it is a word, yay!\n",
+      "        if is_word(sub):\n",
+      "            yield sub\n",
+      "        \n",
+      "        ## If it's not a word, but it's 3 or less letters it's probably not two words, so just yield that.\n",
+      "        elif len(sub) <= 3:\n",
+      "            yield sub\n",
+      "        \n",
+      "        ## Otherwise let's try to split it into two words\n",
+      "        else:\n",
+      "            pair = find_two_words(sub)\n",
+      "            if pair:\n",
+      "                yield pair[0]\n",
+      "                yield pair[1]\n",
+      "            \n",
+      "            ## No dice, okay well let's just yield it\n",
+      "            else:\n",
+      "                yield sub\n",
+      "    \n",
+      "    \n",
+      "def cut(string, half):\n",
+      "    sz = len(string)\n",
+      "    if sz == 1:\n",
+      "        return False\n",
+      "    half = sz / 2\n",
+      "    left = string[:half]\n",
+      "    right = string[half:]\n",
+      "    return left, right\n",
+      "    \n",
+      "\n",
+      "#list( split_words(\"noticeid\") )\n",
+      "list( split_words(\"contract_sequence_number\") )\n",
+      "\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 83,
+       "text": [
+        "['contract', 'sequence', 'number']"
+       ]
+      }
+     ],
+     "prompt_number": 83
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "headers = [\n",
+      "    '=== UK ===',\n",
+      "    'NOTICEID',\n",
+      "    'REFERENCENUMBER',\n",
+      "    'DATEPUBLISHED',\n",
+      "    'VALUEMIN',\n",
+      "    'VALUEMAX',\n",
+      "    'STATUS',\n",
+      "    'URL',\n",
+      "    'ORG_NAME',\n",
+      "    'ORG_CONTACTEMAIL',\n",
+      "    'TITLE',\n",
+      "    'DESCRIPTION',\n",
+      "    'NOTICETYPE',\n",
+      "    'REGION',\n",
+      "    'NOTICE_STATE',\n",
+      "    'NOTICE_STATE_CHANGE_DATE',\n",
+      "    'CLASSIFICATION',\n",
+      "    'NUM_DOCS',\n",
+      "    \n",
+      "    '=== Canada ===',\n",
+      "    'language',\n",
+      "    'procurement_entity_name',\n",
+      "    'title',\n",
+      "    'reference_number',\n",
+      "    'solicitation_number',\n",
+      "    'contract_sequence_number',\n",
+      "    'contract_number',\n",
+      "    'publishing_status',\n",
+      "    'award_date',\n",
+      "    'publication_date',\n",
+      "    'amendment_date',\n",
+      "    'gsin',\n",
+      "    'contract_award_procedure',\n",
+      "    'tendering_procedure',\n",
+      "    'procurement_entity',\n",
+      "    'end_user_entity',\n",
+      "    'customer_info',\n",
+      "    'description',\n",
+      "    'supplier_info',\n",
+      "    'currency',\n",
+      "    'contract_value',\n",
+      "    \n",
+      "    '=== Mexico ===',\n",
+      "    'GOVERNMENT',\n",
+      "    'ACRONYMS',\n",
+      "    'UNIT',\n",
+      "    'CompraNet Unit Identifier',\n",
+      "    'CompraNet Unit name',\n",
+      "    'Responsibility',\n",
+      "    'CompraNet Record ID',\n",
+      "    'Record Title ',\n",
+      "    'Record template',\n",
+      "    'Procedure Number',\n",
+      "    'Decision Date',\n",
+      "    'RFP Date Type',\n",
+      "    'Proposal Opening Date',\n",
+      "    'Procedure scope',\n",
+      "    'Contract Type',\n",
+      "    'Procedure type',\n",
+      "    'Submission form type',\n",
+      "    'Contract ID',\n",
+      "    'Contract Title',\n",
+      "    'Contract start date',\n",
+      "    'contract end date',\n",
+      "    'contract value',\n",
+      "    'Currency type',\n",
+      "    'contract status',\n",
+      "    'archive status',\n",
+      "    'Unit Branch',\n",
+      "    'Program Key',\n",
+      "    'Federal contribution',\n",
+      "    'Signature date',\n",
+      "    'Contract Framework',\n",
+      "    'Consolidated purchase',\n",
+      "    'Multi-year',\n",
+      "    'Unit stratification',\n",
+      "    'Contractor Legal Name',\n",
+      "    'Contractor stratification',\n",
+      "    'Company state',\n",
+      "    'Account manager type',\n",
+      "    'announcement URL',\n",
+      "    \n",
+      "    '=== Columbia ===',\n",
+      "    'Sector Code',\n",
+      "    'Name of the Sector',\n",
+      "    'Executing Unit Code',\n",
+      "    'Name of the unit',\n",
+      "    'Budget Type',\n",
+      "    'Budget Category',\n",
+      "    'Name of the budget category',\n",
+      "    'Funding Source',\n",
+      "    'Name of the Budget',\n",
+      "    'Budget Status',\n",
+      "    'Month',\n",
+      "    'Initial Appropriation',\n",
+      "    'Current Appropiation',\n",
+      "    'Value of the Engagement',\n",
+      "    'Value of the obligations',\n",
+      "    'Total Value of the Payment order',\n",
+      "    'Engaged Percentage',\n",
+      "    'Mandatory percentage',\n",
+      "    'Payed percentage',\n",
+      "    \n",
+      "    '=== Georgia ===',\n",
+      "    'id',\n",
+      "    'procurring_entity_id',\n",
+      "    'tender_type',\n",
+      "    'tender_registration_number',\n",
+      "    'tender_status',\n",
+      "    'tender_announcement_date',\n",
+      "    'bid_start_date',\n",
+      "    'bid_end_date',\n",
+      "    'estimated_value',\n",
+      "    'include_vat',\n",
+      "    'cpv_code',\n",
+      "    'offer_step',\n",
+      "    'guarantee_amount',\n",
+      "    'guarantee_period',\n",
+      "    'created_at',\n",
+      "    'updated_at',\n",
+      "    'dataset_id',\n",
+      "    'url_id',\n",
+      "    'num_bids',\n",
+      "    'num_bidders',\n",
+      "    'contract_value',\n",
+      "    'winning_org_id',\n",
+      "    'risk_indicators',\n",
+      "    'procurer_name',\n",
+      "    'supplier_name',\n",
+      "    'sub_codes',\n",
+      "    'inProgress',\n",
+      "    'updated',\n",
+      "    'is_new',\n",
+      "    'procurer_code',\n",
+      "    'winner_code',\n",
+      "]\n",
+      "\n",
+      "for header in headers:\n",
+      "    if header.startswith('='):\n",
+      "        print \"\\n\", header\n",
+      "        continue\n",
+      "    print header, list( split_words(header) )\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\n",
+        "=== UK ===\n",
+        "NOTICEID ['notice', 'id']\n",
+        "REFERENCENUMBER ['reference', 'number']\n",
+        "DATEPUBLISHED ['date', 'published']\n",
+        "VALUEMIN ['value', 'min']\n",
+        "VALUEMAX ['value', 'max']\n",
+        "STATUS ['status']\n",
+        "URL ['url']\n",
+        "ORG_NAME ['org', 'name']\n",
+        "ORG_CONTACTEMAIL ['org', 'contact', 'email']\n",
+        "TITLE ['title']\n",
+        "DESCRIPTION ['description']\n",
+        "NOTICETYPE ['notice', 'type']\n",
+        "REGION ['region']\n",
+        "NOTICE_STATE ['notice', 'state']\n",
+        "NOTICE_STATE_CHANGE_DATE ['notice', 'state', 'change', 'date']\n",
+        "CLASSIFICATION ['classification']\n",
+        "NUM_DOCS ['num', 'docs']\n",
+        "\n",
+        "=== Canada ===\n",
+        "language ['language']\n",
+        "procurement_entity_name ['procurement', 'entity', 'name']\n",
+        "title ['title']\n",
+        "reference_number ['reference', 'number']\n",
+        "solicitation_number ['solicitation', 'number']\n",
+        "contract_sequence_number ['contract', 'sequence', 'number']\n",
+        "contract_number ['contract', 'number']\n",
+        "publishing_status ['publishing', 'status']\n",
+        "award_date ['award', 'date']\n",
+        "publication_date ['publication', 'date']\n",
+        "amendment_date ['amendment', 'date']\n",
+        "gsin ['gs', 'in']\n",
+        "contract_award_procedure ['contract', 'award', 'procedure']\n",
+        "tendering_procedure ['tendering', 'procedure']\n",
+        "procurement_entity ['procurement', 'entity']\n",
+        "end_user_entity ['end', 'user', 'entity']\n",
+        "customer_info ['customer', 'info']\n",
+        "description ['description']\n",
+        "supplier_info ['supplier', 'info']\n",
+        "currency ['currency']\n",
+        "contract_value ['contract', 'value']\n",
+        "\n",
+        "=== Mexico ===\n",
+        "GOVERNMENT ['government']\n",
+        "ACRONYMS ['acronyms']\n",
+        "UNIT ['unit']\n",
+        "CompraNet Unit Identifier ['compranet', 'unit', 'identifier', 'comp', 'ranet', 'unit', 'identifier']\n",
+        "CompraNet Unit name ['compranet', 'unit', 'name', 'comp', 'ranet', 'unit', 'name']\n",
+        "Responsibility ['responsibility']\n",
+        "CompraNet Record ID ['compranet', 'record', 'id', 'comp', 'ranet', 'record', 'id']\n",
+        "Record Title  ['record', 'title', 'record', 'title']\n",
+        "Record template ['record', 'template', 'record', 'template']\n",
+        "Procedure Number ['procedure', 'number', 'procedure', 'number']\n",
+        "Decision Date ['decision', 'date', 'decision', 'date']\n",
+        "RFP Date Type ['rfp', 'date', 'type', 'rfp', 'date', 'type']\n",
+        "Proposal Opening Date ['proposal', 'opening', 'date', 'proposal', 'opening', 'date']\n",
+        "Procedure scope ['procedure', 'scope', 'procedure', 'scope']\n",
+        "Contract Type ['contract', 'type', 'contract', 'type']\n",
+        "Procedure type ['procedure', 'type', 'procedure', 'type']\n",
+        "Submission form type ['submission', 'form', 'type', 'submission', 'form', 'type']\n",
+        "Contract ID ['contract', 'id', 'contract', 'id']\n",
+        "Contract Title ['contract', 'title', 'contract', 'title']\n",
+        "Contract start date ['contract', 'start', 'date', 'contract', 'start', 'date']\n",
+        "contract end date ['contract', 'end', 'date', 'contract', 'end', 'date']\n",
+        "contract value ['contract', 'value', 'contract', 'value']\n",
+        "Currency type ['currency', 'type', 'currency', 'type']\n",
+        "contract status ['contract', 'status', 'contract', 'status']\n",
+        "archive status ['archive', 'status', 'archive', 'status']\n",
+        "Unit Branch ['unit', 'branch', 'unit', 'branch']\n",
+        "Program Key ['program', 'key', 'program', 'key']\n",
+        "Federal contribution ['federal', 'contribution', 'federal', 'contribution']\n",
+        "Signature date ['signature', 'date', 'signature', 'date']\n",
+        "Contract Framework ['contract', 'framework', 'contract', 'framework']\n",
+        "Consolidated purchase ['consolidated', 'purchase', 'consolidated', 'purchase']\n",
+        "Multi-year ['mu', 'lti', 'year']\n",
+        "Unit stratification ['unit', 'stratification', 'unit', 'stratification']\n",
+        "Contractor Legal Name ['contractor', 'legal', 'name', 'contractor', 'legal', 'name']\n",
+        "Contractor stratification ['contractor', 'stratification', 'contractor', 'stratification']\n",
+        "Company state ['company', 'state', 'company', 'state']\n",
+        "Account manager type ['account', 'manager', 'type', 'account', 'manager', 'type']\n",
+        "announcement URL ['announcement', 'url', 'announcement', 'url']\n",
+        "\n",
+        "=== Columbia ===\n",
+        "Sector Code ['sector', 'code', 'sector', 'code']\n",
+        "Name of the Sector ['name', 'of', 'the', 'sector', 'name', 'of', 'the', 'sector']\n",
+        "Executing Unit Code ['executing', 'unit', 'code', 'executing', 'unit', 'code']\n",
+        "Name of the unit ['name', 'of', 'the', 'unit', 'name', 'of', 'the', 'unit']\n",
+        "Budget Type ['budget', 'type', 'budget', 'type']\n",
+        "Budget Category ['budget', 'category', 'budget', 'category']\n",
+        "Name of the budget category ['name', 'of', 'the', 'budget', 'category', 'name', 'of', 'the', 'budget', 'category']\n",
+        "Funding Source ['funding', 'source', 'funding', 'source']\n",
+        "Name of the Budget ['name', 'of', 'the', 'budget', 'name', 'of', 'the', 'budget']\n",
+        "Budget Status ['budget', 'status', 'budget', 'status']\n",
+        "Month ['month']\n",
+        "Initial Appropriation ['initial', 'appropriation', 'initial', 'appropriation']\n",
+        "Current Appropiation ['current', 'appropiation', 'current', 'appropiat', 'ion']\n",
+        "Value of the Engagement ['value', 'of', 'the', 'engagement', 'value', 'of', 'the', 'engagement']\n",
+        "Value of the obligations ['value', 'of', 'the', 'obligations', 'value', 'of', 'the', 'obligations']\n",
+        "Total Value of the Payment order ['total', 'value', 'of', 'the', 'payment', 'order', 'total', 'value', 'of', 'the', 'payment', 'order']\n",
+        "Engaged Percentage ['engaged', 'percentage', 'engaged', 'percentage']\n",
+        "Mandatory percentage ['mandatory', 'percentage', 'mandatory', 'percentage']\n",
+        "Payed percentage ['payed', 'percentage', 'payed', 'percentage']\n",
+        "\n",
+        "=== Georgia ===\n",
+        "id ['id']\n",
+        "procurring_entity_id ['procur', 'ring', 'entity', 'id']\n",
+        "tender_type ['tender', 'type']\n",
+        "tender_registration_number ['tender', 'registration', 'number']\n",
+        "tender_status ['tender', 'status']\n",
+        "tender_announcement_date ['tender', 'announcement', 'date']\n",
+        "bid_start_date ['bid', 'start', 'date']\n",
+        "bid_end_date ['bid', 'end', 'date']\n",
+        "estimated_value ['estimated', 'value']\n",
+        "include_vat ['include', 'vat']\n",
+        "cpv_code ['cpv', 'code']\n",
+        "offer_step "
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "['offer', 'step']\n",
+        "guarantee_amount ['guarantee', 'amount']\n",
+        "guarantee_period ['guarantee', 'period']\n",
+        "created_at ['created', 'at']\n",
+        "updated_at ['updated', 'at']\n",
+        "dataset_id ['data', 'set', 'id']\n",
+        "url_id ['url', 'id']\n",
+        "num_bids ['num', 'bids']\n",
+        "num_bidders ['num', 'bidders']\n",
+        "contract_value ['contract', 'value']\n",
+        "winning_org_id ['winning', 'org', 'id']\n",
+        "risk_indicators ['risk', 'indicators']\n",
+        "procurer_name ['procurer', 'name']\n",
+        "supplier_name ['supplier', 'name']\n",
+        "sub_codes ['sub', 'codes']\n",
+        "inProgress ['in', 'progress']\n",
+        "updated ['updated']\n",
+        "is_new ['is', 'new']\n",
+        "procurer_code ['procurer', 'code']\n",
+        "winner_code ['winner', 'code']\n"
+       ]
+      }
+     ],
+     "prompt_number": 75
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 65
     },
     {
      "cell_type": "code",
