get_trans function now working

--- a/translation/OpenContracting_TranslationScripts.ipynb
+++ b/translation/OpenContracting_TranslationScripts.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:496132661885cd72f7b8f448726556af3b700334027736c67f3df2f716e0fe86"
+  "signature": "sha256:3dc70d3fa8c4191556e7f92c689a208974c49626787d708981453e3e430689d8"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -35,12 +35,12 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "my_key = (\"AIzaSyCZBVx2a3tzKTW9TmTXoB3KJ_Z7T9PEspE\")"
+      "## enter the google translate API key here\n",
+      "my_key = (\".\")"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 29
+     "outputs": []
     },
     {
      "cell_type": "markdown",
